[package]
name = "actix-web-oauth2"
version = "0.1.0"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
edition = "2018"
default-run = "gitlab"

[dependencies]
actix-web = "1.0.0"
actix-session = "0.2.0"

oauth2 = "2.0"
curl = "0.4"
base64 = "0.10"
rand = "0.7"
url = "1.7"

futures = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
