[package]
name = "actix-web-oauth2"
version = "0.2.0"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
edition = "2018"
default-run = "gitlab"

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.2.0"
actix-session = "0.4.0"

oauth2 = "4.0.0-alpha.2"
base64 = "0.13"
rand = "0.7"
url = "2.2"
http = "0.2"

futures = "0.3.7"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
